02-pod.yml
kind: Pod
apiVersion: v1
metadata:
  name: demo
spec:
  containers:
    - name:  nginx
      image:  nginx
    - name: debugf
      image:  rkalluru/debug
