03-replicaset.yml
kind: Pod
apiVersion: v1
metadata:
  name: demo1
  labels:
    tier: frontend
spec:
  containers:
    - name: nginx
      image: nginx
