19-node-selector.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    env: test
spec:
  containers:
    - name: nginx
      image: nginx
      imagePullPolicy: IfNotPresent
  nodeSelector:
    disktype: ssdx



#This is to understand the 'label' for node. Using kubectl command, you can label  a node and then create a pod
#under that given node using that label name. here disktype:ssd is the label name.
