20-taints-n-tolerations.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-1
  labels:
    env: test
spec:
  containers:
    - name: nginx
      image: nginx
      imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-2
  labels:
    env: test
spec:
  containers:
    - name: nginx
      image: nginx
      imagePullPolicy: IfNotPresent
  tolerations:
    - key: "priority"
      operator: "Equal"
      value: "one"
      effect: "NoSchedule"


#I created a node and tainted it with following command:
#  "kubectl taint nodes <node-name> priority=one:NoSchedule"
#
#  Then while create the Pod, i give toleration, which means, if any node is tainted with this key and pod has permission
#  to tolerate this taint and get created in that node
