08-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: web

---
kind: Pod
apiVersion: v1
metadata:
  name: nginx-1
  namespace: web
  labels:
    appName: nginx-1
spec:
  containers:
    - name: nginx
      image: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx-1
  namespace: web
spec:
  type: ClusterIP
  selector:
    appName: nginx-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
kind: Pod
apiVersion: v1
metadata:
  name: debug
spec:
  containers:
    - name: debug
      image: rkalluru/debug
